# vixen

./: .gitignore  README.md  main.c  meson.build  vixen.c  vixen.cpp  vixen_test.c  vixen_test.cpp  vixenw.sh
asm/: hello.asm
grammar/: arithmetic.vxn  control.vxn  parse_test.vxn  primitives.vxn  test_symbols.vxn  variables.vxn
include/: vixen.h  vixen.hpp
include/vixen/: lexer.h  nodes.hpp  objects.h  parser.h  parser.hpp  strings.h  symbols.hpp  tokens.h  tokens.hpp
proto/: asm.py  nodes.py  parser.py  symbols.py  tokens.py  vixen.py
tests/: ggm.hpp  hounddog.hpp  test_parser.vxn  vixen.hpp
tests/vixen/: test_symbols.hpp  test_testconf.hpp  test_tokens.hpp
